# EDiffCrystals

./: .gitignore  README.md  environment.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: quick_install_checker.yml  version_bump.yml  version_bump.yml.bk
models/: notebook_to_download_models.ipynb
notebooks/: Au_Array_Bragg_Disk_Detection.ipynb  Figure_1_Visualization.ipynb  Predict_experimental_patterns.ipynb  diffraction_schematic_01.ipynb
scripts/: Full_test_set_generation.py  Predict_lattice_in_output_df.py  generate_aggregate_cm.py  generate_r2s.py  run_full_code_base.py  run_radial_inputs.py
src/EDiffCrystals/: RF_Diffraction.py  RF_Diffraction_utils.py  __init__.py  diffraction_analysis.py  diffraction_analysis_utils.py
src/package/: RF_Diffraction.py  RF_Diffraction_OOP.py  RF_Diffraction_utils.py  RF_Functions.py  __init__.py  diffraction_analysis.py  diffraction_analysis_utils.py  utils.py
