[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "EDiffCrystals"
dependencies = [

]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "package.__version__"}

[tool.hatchling.requires]
python = ">=3.9"

[tool.hatchling.dependencies]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/package/__init__.py"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
exclude = "__init__.py"

[tool.ruff]
exclude = ["__init__.py"]
