[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "EDiffCrystals"
dependencies = [
    'numpy',
    'matplotlib',
    'scikit-learn==1.2.1',
    'py4DSTEM==0.14.8',
    'pandas',
    'joblib',
    'seaborn',
    'scipy',
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "EDiffCrystals.__version__"}

[tool.hatchling.requires]
python = ">=3.9"

[tool.hatchling.dependencies]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/EDiffCrystals/__init__.py"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
exclude = "__init__.py"

[tool.ruff]
exclude = ["__init__.py"]
